derive/tests/snapshots/restricted_accessor_visibility/Gauge/get_all_gauges.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `gauge` table.
    pub fn get_all_gauges<'a>(&'a self) -> impl Iterator<Item = Gauge> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().gauge().iter()
    }
}
