derive/tests/snapshots/restricted_accessor_visibility/Gauge/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct GaugeId {
    value: u64,
}
impl Default for GaugeId {
    fn default() -> GaugeId {
        GaugeId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for GaugeId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "GaugeId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for GaugeId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Gauge> for GaugeId {
    fn from(value: &Gauge) -> Self {
        GaugeId { value: value.id.clone() }
    }
}
impl From<&Gauge> for Option<GaugeId> {
    fn from(value: &Gauge) -> Option<GaugeId> {
        Some(GaugeId { value: value.id.clone() })
    }
}
impl From<&GaugeId> for Option<GaugeId> {
    fn from(value: &GaugeId) -> Option<GaugeId> {
        use crate::spacetimedsl::Wrapper;
        Some(GaugeId::new(value.value()))
    }
}
impl From<&GaugeId> for GaugeId {
    fn from(value: &GaugeId) -> Self {
        use crate::spacetimedsl::Wrapper;
        GaugeId::new(value.value())
    }
}
impl Gauge {
    ///
    pub fn get_id(&self) -> GaugeId {
        use crate::spacetimedsl::Wrapper;
        GaugeId::new(self.id.clone())
    }
    ///
    pub fn get_label(&self) -> &String {
        use crate::spacetimedsl::Wrapper;
        &self.label
    }
    ///
    pub(crate) fn get_label_mut(&mut self) -> &mut String {
        use crate::spacetimedsl::Wrapper;
        &mut self.label
    }
    ///
    pub(crate) fn set_label(&mut self, label: String) -> String {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.label, label);
        old_value
    }
    ///
    pub fn get_reading(&self) -> &u32 {
        use crate::spacetimedsl::Wrapper;
        &self.reading
    }
    ///
    pub(super) fn get_reading_mut(&mut self) -> &mut u32 {
        use crate::spacetimedsl::Wrapper;
        &mut self.reading
    }
    ///
    pub(super) fn set_reading(&mut self, reading: u32) -> u32 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.reading, reading);
        old_value
    }
    ///
    pub fn get_unit(&self) -> &String {
        use crate::spacetimedsl::Wrapper;
        &self.unit
    }
    ///
    pub(in crate::instruments) fn get_unit_mut(&mut self) -> &mut String {
        use crate::spacetimedsl::Wrapper;
        &mut self.unit
    }
    ///
    pub(in crate::instruments) fn set_unit(&mut self, unit: String) -> String {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.unit, unit);
        old_value
    }
}
///
pub struct CreateGauge {
    pub label: String,
    pub reading: u32,
    pub unit: String,
}

// Generated DSL methods:
// count_of_all_gauges
// create_gauge
// delete_gauge_by_id
// get_all_gauges
// get_gauge_by_id
// update_gauge_by_id
